# controllers/chats/chatsControllers.go
@@ -4,11 +4,14 @@ import (
 	"encoding/json"
 	"fmt"
 	"log"
+	"properlyauth/controllers"
 	"properlyauth/models"
 	"properlyauth/utils"
 	"time"
 
+	"github.com/gin-gonic/gin"
 	socketio "github.com/googollee/go-socket.io"
+	"net/http"
 )
 
 type LiveChat struct {
@@ -28,14 +31,11 @@ var (
 
 func CreateChatServer() *socketio.Server {
 	server := socketio.NewServer(nil)
-
 	server.OnConnect("/", func(s socketio.Conn) error {
-		utils.PrintSomeThing(s.URL().RawQuery)
 		server.JoinRoom("/", s.ID(), s)
 		err := models.Insert(
 			&models.ChatSession{SessionID: s.ID(), CreatedAt: time.Now().Unix()},
 			models.ChatSessionCollectionName)
-		log.Println(err)
 		return err
 	})
 
@@ -44,15 +44,40 @@ func CreateChatServer() *socketio.Server {
 		if err := json.Unmarshal([]byte(msg), &lc); err == nil {
 			res, err := utils.DecodeJWTToken(lc.Token)
 			if err != nil {
-				sendNotification("Couldn't parse token")
+				controllers.SendNotification("Couldn't parse token", "")
 				return msg
 			}
+			chatSessionUser1, err := models.GetChatSession("sessionid", s.ID())
+			if err != nil {
+				log.Println(err.Error(), s.ID())
+				controllers.SendNotification("Error fetching user chat session", chatSessionUser1.UserID)
+				return msg
+			}
+			chatSessionUser1.UserID = res["user_id"]
+			models.UpdateData(chatSessionUser1, models.ChatSessionCollectionName)
+			ticker := time.NewTicker(500 * time.Millisecond)
+			count := 0
 
 			chatSessionUser2, err := models.GetChatSession("sessionid", lc.To)
 			if err != nil {
-				//send an error message or Something
-				sendNotification("Error fetching user chat session")
-				return msg
+			waiter:
+				for {
+					count++
+					select {
+					case t := <-ticker.C:
+						chatSessionUser2, err = models.GetChatSession("sessionid", lc.To)
+						if err == nil {
+							break waiter
+						} else {
+							if count > 100 {
+								//save the chat
+								goto saveChat
+							}
+							log.Println("waiting for user ", t, lc.To)
+						}
+
+					}
+				}
 			}
 
 			//TODO (check if the user is already in the room)
@@ -60,30 +85,29 @@ func CreateChatServer() *socketio.Server {
 			server.ForEach("/", chatSessionUser2.SessionID, func(c socketio.Conn) {
 				buf, err := json.Marshal(lc)
 				if err != nil {
-					//send some error notification here
-					sendNotification("Error sending message")
+					controllers.SendNotification("Error sending message", chatSessionUser1.UserID)
 					return
 				}
 				c.Emit(fmt.Sprintf("%s", buf))
-				sendNotification(lc.Text)
+				controllers.SendNotification(lc.Text, chatSessionUser1.UserID)
 			})
 
+		saveChat:
 			chat := models.Chats{
-				CreatedAt:  lc.CreatedAt,
-				Medias:     lc.Medias,
-				Text:       lc.Text,
-				ReceivedBy: lc.To,
-				SentBy:     res["user_id"],
+				CreatedAt: lc.CreatedAt,
+				Medias:    lc.Medias,
+				Text:      lc.Text,
+				SentBy:    res["user_id"],
 			}
 
 			err = models.Insert(&chat, models.ChatCollectionName)
 			if err != nil {
-				sendNotification("Error storing  message")
+				controllers.SendNotification("Error storing  message", chatSessionUser1.UserID)
 				return msg
 			}
 
 		} else {
-			sendNotification("Invalid message sent")
+			controllers.SendNotification("Invalid message sent", "")
 			return msg
 		}
 
@@ -105,12 +129,39 @@ func CreateChatServer() *socketio.Server {
 	return server
 }
 
-func sendNotification(text string) {
-	notification := models.Notification{
-		Text: text,
+// ListChatsBetween godoc
+// @Summary list chat between users
+// @Description
+// @Tags accounts
+// @Accept  json
+// @Param  details body models.ListChatRequestModel true "requestdetails"
+// @Produce  json
+// @Success 200 {object} models.HTTPRes
+// @Failure 400 {object} models.HTTPRes
+// @Failure 404 {object} models.HTTPRes
+// @Failure 500 {object} models.HTTPRes
+// @Router /v1/list/chats/ [post]
+// @Security ApiKeyAuth
+func ListChatsBetween(c *gin.Context) {
+	data := models.ListChatRequestModel{}
+	user, _, ok := controllers.CheckUser(c, false)
+	if !ok {
+		return
 	}
-	log.Println(
-		fmt.Sprintf("Inserting notification %s", notification.Text),
-		models.Insert(&notification, models.NotificationCollectionName),
-	)
+	c.ShouldBindJSON(&data)
+	errorResponse, err := utils.MissingDataResponse(data)
+	if err != nil {
+		models.NewResponse(c, http.StatusInternalServerError, err, false)
+		return
+	}
+	if len(errorResponse) > 0 {
+		models.NewResponse(c, http.StatusBadRequest, fmt.Errorf("You provided invalid fetch details"), errorResponse)
+		return
+	}
+	chats, err := models.FetchDocByCriterionMultiple("sentby", models.ChatCollectionName, []string{data.OtherUserId, user.ID})
+	if err != nil {
+		models.NewResponse(c, http.StatusInternalServerError, err, struct{}{})
+		return
+	}
+	models.NewResponse(c, http.StatusOK, fmt.Errorf("List of chats  between user"), chats)
 }
